# video_builder

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
src/video_builder/: __init__.py  __main__.py  assemble.py  settings.py  speedup.py  subtitles.py  trim.py
src/video_builder/experimental/: README.md  highlight.py  zoom.py
videos_demo/subtitles/: clip01.srt  clip02.srt  clip03.srt  clip04.srt  clip05.srt  clip06.srt  clip07.srt  clip08.srt  clip09.srt  clip10.srt
